# amplifier

./: .gitignore  bundle.md  extract_docx.py
amplifier-ado-event-monitor/: .dev-machine-assessment.md  fetch-repo.sh  pyproject.toml  pyrightconfig.json  subscriptions.yaml  subscriptions.yaml.example
amplifier-ado-event-monitor/.amplifier/: AGENTS.md  bundle.md  settings.yaml
amplifier-ado-event-monitor/.amplifier/agents/: developer.md
amplifier-ado-event-monitor/recipes/: handle-pr-build-failure.yaml  handle-pr-comment.yaml  handle-pr-vote-change.yaml  handle-work-item-comment.yaml
amplifier-ado-event-monitor/specs/: 000-capability-spec.md  001-exponential-backoff.md  002-dead-letter-queue.md  003-webhook-accelerator.md  004-agent-output-capture.md  005-lifecycle-governance.md  006-foreman-integration-spec.md
amplifier-ado-event-monitor/src/ado_monitor/: __init__.py  cli.py  config.py  differ.py  dispatcher.py  event_logger.py  models.py  monitor.py  poller.py  state.py  webhook.py
amplifier-ado-event-monitor/src/ado_monitor/sources/: __init__.py  composite.py  discovery.py  foreman.py  yaml_source.py
amplifier-ado-event-monitor/tests/: __init__.py  test_differ.py  test_foreman_integration.py  test_state.py
amplifier-bundle-ado-infra/: bundle.md
amplifier-bundle-ado-kql/: bundle.md
amplifier-bundle-ado-pr/: bundle.md
amplifier-bundle-ado-research/: bundle.md
amplifier-bundle-ado-scrum/: bundle.md
amplifier-bundle-ado-swe-agents/: bundle.md
amplifier-bundle-ado-test/: bundle.md
amplifier-bundle-parallel-worktrees/: bundle.md  pyproject.toml
amplifier-bundle-parallel-worktrees/agents/: worktree-orchestrator.md
amplifier-bundle-parallel-worktrees/amplifier_bundle_parallel_worktrees/: __init__.py
amplifier-bundle-parallel-worktrees/behaviors/: parallel-worktrees.yaml
amplifier-bundle-parallel-worktrees/context/: worktree-awareness.md
amplifier-hook-activity-indicator/: README.md  activity_indicator.py  pyproject.toml
(+48 files in other folders)
