[project]
name = "amplifier-bundle-parallel-worktrees"
version = "1.0.0"
description = "Parallel git worktree orchestration for multi-branch Amplifier development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.bundles"]
parallel-worktrees = "amplifier_bundle_parallel_worktrees:get_bundle_path"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_bundle_parallel_worktrees"]
