[project]
name = "amplifier-hook-activity-indicator"
version = "0.1.0"
description = "Shows a spinner during long-running Amplifier operations"
requires-python = ">=3.11"
dependencies = ["amplifier-core>=1.0.0"]

[project.entry-points."amplifier.modules"]
hook-activity-indicator = "activity_indicator:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
